core/sr-api-macros/tests/ui/type_reference_in_impl_runtime_apis_call.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> $DIR/type_reference_in_impl_runtime_apis_call.rs:20:17
   |
14 |         fn test(data: u64);
   |                       --- type in trait
...
20 |         fn test(data: &u64) {
   |                       ^^^^ expected u64, found &u64
   |
   = note: expected type `fn(u64)`
              found type `fn(&u64)`

error[E0053]: method `Api_test_runtime_api_impl` has an incompatible type for trait
  --> $DIR/type_reference_in_impl_runtime_apis_call.rs:18:1
   |
12 | / decl_runtime_apis! {
13 | |     pub trait Api {
14 | |         fn test(data: u64);
15 | |     }
16 | | }
   | |_- type in trait
17 | 
18 |   impl_runtime_apis! {
   |   ^^^^^^^^^^^^^^^^^^ expected u64, found &u64
   |
   = note: expected type `fn(&RuntimeApiImpl<RuntimeApiImplCall>, &sr_primitives::generic::block::BlockId<sr_primitives::generic::block::Block<sr_primitives::generic::header::Header<u64, sr_primitives::traits::BlakeTwo256>, substrate_test_runtime::Extrinsic>>, sr_api_hidden_includes_DECL_RUNTIME_APIS::sr_api_client::runtime_api::ExecutionContext, std::option::Option<u64>, std::vec::Vec<u8>) -> std::result::Result<sr_api_hidden_includes_DECL_RUNTIME_APIS::sr_api_client::runtime_api::NativeOrEncoded<()>, sr_api_hidden_includes_DECL_RUNTIME_APIS::sr_api_client::error::Error>`
              found type `fn(&RuntimeApiImpl<RuntimeApiImplCall>, &sr_primitives::generic::block::BlockId<sr_primitives::generic::block::Block<sr_primitives::generic::header::Header<u64, sr_primitives::traits::BlakeTwo256>, substrate_test_runtime::Extrinsic>>, sr_api_hidden_includes_DECL_RUNTIME_APIS::sr_api_client::runtime_api::ExecutionContext, std::option::Option<&u64>, std::vec::Vec<u8>) -> std::result::Result<sr_api_hidden_includes_DECL_RUNTIME_APIS::sr_api_client::runtime_api::NativeOrEncoded<()>, sr_api_hidden_includes_DECL_RUNTIME_APIS::sr_api_client::error::Error>`

error[E0308]: mismatched types
  --> $DIR/type_reference_in_impl_runtime_apis_call.rs:18:1
   |
18 | / impl_runtime_apis! {
19 | |     impl self::Api<Block> for Runtime {
20 | |         fn test(data: &u64) {
21 | |             unimplemented!()
...  |
35 | |     }
36 | | }
   | |_^ expected u64, found &u64
   |
   = note: expected type `u64`
              found type `&u64`
